--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,6 @@ repos:
             args: [--fix]
           # Sort imports
           - id: ruff
-            args: ["check", "--select", "I", "--fix"]
+            args: [check, --select, I, --fix]
           # Run the formatter.
           - id: ruff-format
