--- a/example-sweep.yaml
+++ b/example-sweep.yaml
@@ -7,6 +7,7 @@ command:
   - --num-epochs=1000
   - --batch-size=64
   - --checkpoint-dir=gs://ssm-checkpoints/
+  - --checkpoint-every=60
   - ${args}
 method: grid
 parameters:
