--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-jax
+jax==0.5.3
+jaxlib==0.5.3
 numpy
 scipy
 jsonargparse
@@ -13,3 +14,5 @@ tensorflow
 soundfile
 librosa
 huggingface_hub
+jaxtyping==0.2.38
+typeguard==2.13.3
